<resources>

    <string name="app_name">Shopping List</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Shopping List</string>
    <string name="created_by">Scott MacEwan</string>
    <string name="begin">Begin </string>
    <string name="enter_category_name">Enter New Category Name</string>
    <string name="create">Create </string>
    <string name="add_item">Add Item</string>
    <string name="add_item_hint">Item Name</string>
    <string name="fruit">Fruit</string>
    <string name="vegetable">Vegetable</string>
    <string name="protein">Protein</string>
    <string name="bread">Bread</string>
    <string name="dairy">Dairy</string>
    <string name="other">Other</string>
    <string name="choose_category">Choose Category</string>
    <string name="title_list_activity">Shopping List</string>
    <string name="title_add_item_activity">Add Item</string>
    <string name="delete">Delete</string>
    <string name="title_search_recipe">Search Recipes</string>
    <string name="search_recipe_hint">Type recipe search &#8230;</string>
    <string name="search">Search</string>
    <string name="yummly_nod">Recipe search uses Recipe Puppy Search API</string>
    <string name="search_for_recipe">Search For a Recipe</string>
    <string name="or">OR</string>
    <string name="recipe_title">Recipe Name</string>
    <string name="recipe_ingredients">Ingredients</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="clear_list">Clear List</string>

</resources>