<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <EditText
        android:id="@+id/item_name"
        android:hint="@string/add_item_hint"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content" />
	<Spinner
	    android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_name"
        android:entries="@array/categories"
        android:prompt="@string/choose_category" />
	<Button
	    android:id="@+id/create_item"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/category"
	    android:text="@string/add_item"/>
</RelativeLayout>