<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:padding="5sp">
    <TextView
        android:id="@+id/recipeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipe_title"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/recipeIngredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipe_ingredients"
        android:layout_below="@+id/recipeTitle"
        android:textSize="12sp"/>
	<Button
	    android:id="@+id/recipeAdd"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/add_recipe"
	    android:layout_below="@+id/recipeIngredients"
	    android:layout_alignParentRight="true"
	    android:gravity="right"/>
</RelativeLayout>